--- a/Phase 4/SelfAssisted/restrorant/Phase4_Practice_Assignments-main/Building A Restaurant Website With Bootstrap/index.html
+++ b/Phase 4/SelfAssisted/restrorant/Phase4_Practice_Assignments-main/Building A Restaurant Website With Bootstrap/index.html
@@ -1,6 +1,6 @@
 <html>
 <head>
-<title>Rushikesh Restaurant</title>
+<title>Saurabh Restaurant</title>
 <meta name="viewport" content="width=device-width,initial-scale=1.0,user-scalable=yes">
 <link rel="stylesheet" type="text/css" href="css/bootstrap.min.css" />
 <link rel="stylesheet" type="text/css" href="css/style.css" />
